--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
     <script>
         // Telegram OAuth credentials (замените на свои)
-        const TELEGRAM_BOT_ID = 'logg_robot';
+        const TELEGRAM_BOT_ID = '7871908181';
         const TELEGRAM_OAUTH_URL = `https://oauth.telegram.org/auth?bot_id=${TELEGRAM_BOT_ID}&origin=${encodeURIComponent(window.location.origin)}&embed=1&request_access=write`;
         
         // Имитация базы данных
