--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@
     <script>
         // Инициализация Telegram Auth
         function initTelegramAuth() {
-            const botUsername = 'logg_robot'; // Ваш бот
+            const botUsername = 'rogg_robot';
+            const botId = 7871908181;
             const redirectUrl = encodeURIComponent(window.location.href);
             
             // Открываем окно авторизации Telegram
